src/rules/snapshots/pg_migration_lint__rules__pgm508__tests__new_plain_index_exact_duplicate_of_unique_backed_index_fires.snap
---
source: src/rules/pgm508.rs
expression: findings
---
- rule_id: PGM508
  severity: Info
  message: "Index 'idx_email' on 'orders' (email) is an exact duplicate of index 'uq_orders_email'."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
