src/rules/snapshots/pg_migration_lint__rules__pgm508__tests__new_plain_index_prefix_of_unique_backed_index_fires.snap
---
source: src/rules/pgm508.rs
expression: findings
---
- rule_id: PGM508
  severity: Info
  message: "Index 'idx_a' on 'orders' (a) is redundant — index 'uq_orders_a_b' (a, b) covers the same prefix."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
